--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -1,8 +1,13 @@
 ---
-import Header from "@components/Header.astro";
-import Hero from "@components/Hero.astro";
+import Header from "@components/Header.astro"
+import Hero from "@components/Hero.astro"
 ---
 <main class="">
-<Hero></Hero>
+    <Header></Header>
+    <Hero></Hero>
+    <section class="h-56">
+        sfsd
+    </section>
+    asdfs
 </main>
 
