--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,24 +9,27 @@
       loading="lazy"
     />
   
-    <!-- Capa oscura opcional -->
+    <!-- Blur Layer -->
     <div class="absolute inset-0 bg-black/40 z-10"></div>
   
-    <!-- Contenido centrado -->
+    <!-- Main Content -->
     <div class="relative z-20 text-center px-6 max-w-2xl">
+        <p class="text-2xl sm:text-xl md:text-2xl font-semibold mb-4 !font-rouge-script">
+          Descubre la moda que siempre has soñado
+        </p>
       <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-6">
         Vístete como en tus sueños
       </h1>
       <div class="flex flex-col sm:flex-row gap-4 justify-center">
         <a
           href="#agenda"
-          class="bg-primary-600 hover:bg-primary-700 text-white font-semibold py-3 px-6 rounded transition duration-300 ease-in-out active:scale-95 focus:ring-4 focus:ring-primary-300"
+          class="bg-primary-600 hover:bg-primary-700 text-white font-semibold py-2 px-6 rounded-4xl transition duration-300 ease-in-out active:scale-95 focus:ring-4 focus:ring-primary-300"
         >
           Agenda tu cita
         </a>
         <a
           href="#contacto"
-          class="bg-white text-primary-800 hover:bg-primary-100 font-semibold py-3 px-6 rounded transition duration-300 ease-in-out active:scale-95 focus:ring-4 focus:ring-primary-200"
+          class="bg-white text-primary-800 hover:bg-primary-100 font-semibold py-2 px-6 rounded-4xl transition duration-300 ease-in-out active:scale-95 focus:ring-4 focus:ring-primary-200"
         >
           Contáctanos
         </a>
