--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -1,13 +1,42 @@
 ---
 import Header from "@components/Header.astro"
+import Navbar from "@components/Navbar.astro"
 import Hero from "@components/Hero.astro"
+import Schedules from "@components/Schedules.astro"
+import SocialMedia from "@components/SocialMedia.astro"
+import Carousel from "@components/Carousel.astro"
+
 ---
 <main class="">
     <Header></Header>
+    <Navbar></Navbar>
     <Hero></Hero>
-    <section class="h-56">
-        sfsd
-    </section>
-    asdfs
+    <SocialMedia></SocialMedia>
+    <Schedules></Schedules>
+    <Carousel></Carousel>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione iusto autem asperiores eos quasi corporis? Sequi nemo minima laudantium reiciendis eum at! Nesciunt accusamus veritatis quisquam cum magni ea.
+    </div>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione iusto autem asperiores eos quasi corporis? Sequi nemo minima laudantium reiciendis eum at! Nesciunt accusamus veritatis quisquam cum magni ea.
+    </div>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione iusto autem asperiores eos quasi corporis? Sequi nemo minima laudantium reiciendis eum at! Nesciunt accusamus veritatis quisquam cum magni ea.
+    </div>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione iusto autem asperiores eos quasi corporis? Sequi nemo minima laudantium reiciendis eum at! Nesciunt accusamus veritatis quisquam cum magni ea.
+    </div>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione iusto autem asperiores eos quasi corporis? Sequi nemo minima laudantium reiciendis eum at! Nesciunt accusamus veritatis quisquam cum magni ea.
+    </div>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione iusto autem asperiores eos quasi corporis? Sequi nemo minima laudantium reiciendis eum at! Nesciunt accusamus veritatis quisquam cum magni ea.
+    </div>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione iusto autem asperiores eos quasi corporis? Sequi nemo minima laudantium reiciendis eum at! Nesciunt accusamus veritatis quisquam cum magni ea.
+    </div>
+        <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione iusto autem asperiores eos quasi corporis? Sequi nemo minima laudantium reiciendis eum at! Nesciunt accusamus veritatis quisquam cum magni ea.
+    </div>
 </main>
 
